--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Indecision App</title>
+    <link rel="shortcut icon"
+          href="/images/favicon.png"
+          type="image/png">
   </head>
 
   <body>
